# lliurex-guard

./: generate_po.sh  pyproject.toml  setup.py
admin-center-lliurex-guard.install/lliurex-guard/: module.json
admin-center-lliurex-guard.install/lliurex-guard/src/: blacklist.html  main.html  setpolicy.html  whitelist.html
debian/: admin-center-lliurex-guard.install  changelog  control  copyright  lliurex-guard-n4d.install  lliurex-guard-n4d.postinstall  lliurex-guard-standalone-zerofiles.install  lliurex-guard-standalone.install  lliurex-guard-zerofiles.install  lliurex-guard.dirs  lliurex-guard.install  lliurex-guard.pofiles  lliurex-guard.postinst  lliurex-guard.postrm  n4d-lliurex-guard.install  n4d-lliurex-guard.postinst  n4d-lliurexguard.install  rules
epi-installers/: lliurex-guard-standalone.epi  lliurex-guard-standalone_script  lliurex-guard.epi  lliurex-guard_script
lliurex-guard/: lliurex-guard  lliurex-guard-fix-blacklist  lliurex-guard-gui  lliurex-guard-sanitize-blacklists
lliurex-guard-standalone/: 02-lliurex-guard  updatednstolliurexguard
lliurex-guard/python3-lliurexguard/: Core.py  EditBox.py  GuardManager.py  GuardOptionsStack.py  ListStack.py  ListsModel.py  LoginBox.py  MainStack.py  MainWindow.py  OptionsBox.py  UrlModel.py  guardmanager.py  guardmanager_orig.py  lliurex-guard  settings.py
translations/: ca@valencia.po  ca_ES.UTF-8@valencia.po  ca_ES@valencia.po  es.po  es_ES.po  lliurex-guard.pot
zero-center-files/: lliurex-guard-installer.app  lliurex-guard-installer.zmd  lliurex-guard.app  lliurex-guard.zmd
(+34 files in other folders)
