[build-system]
requires = ["setuptools","setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "lliurex-guard"
version = "0.1"
description = "Aplication to configure websites that may be accesible"
authors = [
	{ name = "Juan Ramon Pelegrina", email="juapesai@hotmail.com" },
	{ name = "LliureX Team"}
]
license = {text="GPL-3"}
urls = {repository="https://github.com/lliurex/lliurex-guard"}

[tool.setuptools]
packages = ["lliurexguard"]

[tool.setuptools.package-dir]
lliurexguard = "lliurex-guard/python3-lliurexguard"

[tool.setuptools.package-data]
lliurexguard = ["rsrc/*"]
